Bug fixed in rabbitmq:client

--- a/RabbitMQDemo.Client/appsettings.json
+++ b/RabbitMQDemo.Client/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "10.123.125.22",
     "User": "guest",
     "Password": "guest"
   },
