--- a/RabbitMQDemo.Client/RabbitMQDemo.Client.csproj
+++ b/RabbitMQDemo.Client/RabbitMQDemo.Client.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Properties\client2\appsettings.json">
+    <Content Update="appsettings.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </Content>
