--- a/RabbitMQDemo.Server/Properties/launchSettings.json
+++ b/RabbitMQDemo.Server/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7176;http://localhost:5114",
+      "applicationUrl": "https://10.123.125.22:7176;http://10.123.125.22:5114",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
